--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html>lang="en"</html>
+<head>
+    <link rel="stylesheet" type="test/css" href="style.css"/>
+    <title>Rama's webpage</title>
+</head>
